--- a/classremapper.gradle
+++ b/classremapper.gradle
@@ -5,21 +5,21 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
+        classpath 'com.google.code.gson:gson:2.8.7'
     }
 }
-import net.minecraftforge.gradle.common.task.TaskApplyRangeMap
-import net.minecraftforge.gradle.common.task.TaskExtractExistingFiles
-import net.minecraftforge.gradle.common.task.TaskExtractRangeMap
-import net.minecraftforge.gradle.common.util.MavenArtifactDownloader
-import net.minecraftforge.gradle.common.util.MinecraftExtension
-import net.minecraftforge.gradle.common.util.MinecraftRepo
-import net.minecraftforge.srgutils.IMappingBuilder
-import net.minecraftforge.srgutils.IMappingFile
 
 repositories {
     maven { url = 'https://maven.minecraftforge.net' }
     mavenCentral()
 }
+
+import net.minecraftforge.gradle.common.task.TaskApplyRangeMap
+import net.minecraftforge.gradle.common.task.TaskExtractExistingFiles
+import net.minecraftforge.gradle.common.task.TaskExtractRangeMap
+import net.minecraftforge.gradle.common.util.MinecraftRepo
+import net.minecraftforge.srgutils.IMappingBuilder
+import net.minecraftforge.srgutils.IMappingFile
 
 def doingUpdate = hasProperty('UPDATE_CLASSNAMES')
 
@@ -42,7 +42,7 @@ if (doingUpdate) {
 
         task chainMappings(type: CreatedChainMojmapsTask) {
             dependsOn(extractSrg)
-            mcVersion MinecraftRepo.getMCVersion(project.extensions.findByType(MinecraftExtension.class).mappingVersion ?: '1.16.5')
+            mcVersion MinecraftRepo.getMCVersion(minecraft?.mappingVersion ?: '1.16.5')
             extractSrgInput tasks.extractSrg.output
         }
 
@@ -66,13 +66,15 @@ if (doingUpdate) {
 }
 
 class CreatedChainMojmapsTask extends DefaultTask {
+    private static final String MANIFEST_URL = "https://launchermeta.mojang.com/mc/game/version_manifest.json"
+    private static final com.google.gson.Gson GSON = new com.google.gson.GsonBuilder().create()
     @Input String mcVersion
     @InputFile File extractSrgInput
     @OutputFile File output = new File(project.buildDir, name + "/chainedmappings.tsrg")
 
     @TaskAction
     void doTask() {
-        def mojToObf = IMappingFile.load(MavenArtifactDownloader.generate(project, "net.minecraft:client:${mcVersion}:mappings@txt", false))
+        def mojToObf = IMappingFile.load(getMojmaps())
         def obfToSrg = IMappingFile.load(extractSrgInput)
 
         def mojToSrg = mojToObf.chain(obfToSrg)
@@ -81,5 +83,51 @@ class CreatedChainMojmapsTask extends DefaultTask {
         mojToSrg.getClasses().each {builder.addClass(it.mapped, it.original) }
 
         builder.build().write(output.toPath(), IMappingFile.Format.TSRG2)
+    }
+
+    @Internal
+    InputStream getMojmaps() {
+        try (InputStream manIn = new URL(MANIFEST_URL).openStream()) {
+            URL url = GSON.fromJson(new InputStreamReader(manIn), ManifestJson.class).getUrl(mcVersion)
+
+            try (InputStream verIn = url.openStream()) {
+                VersionJson json = GSON.fromJson(new InputStreamReader(verIn), VersionJson.class)
+
+                VersionJson.Download download = json.downloads.get("client_mappings")
+
+                return download.url.openStream()
+            }
+        }
+    }
+}
+
+class ManifestJson {
+    VersionInfo[] versions
+
+    static class VersionInfo {
+        String id
+        URL url
+    }
+
+    URL getUrl(String version) {
+        if (version == null) {
+            return null
+        }
+        for (VersionInfo info : versions) {
+            if (version == info.id) {
+                return info.url
+            }
+        }
+        return null
+    }
+}
+
+class VersionJson {
+    Map<String, Download> downloads
+
+    static class Download {
+        String sha1
+        int size
+        URL url
     }
 }
