--- a/classremapper.gradle
+++ b/classremapper.gradle
@@ -14,9 +14,9 @@ repositories {
     mavenCentral()
 }
 
-import net.minecraftforge.gradle.common.task.TaskApplyRangeMap
-import net.minecraftforge.gradle.common.task.TaskExtractExistingFiles
-import net.minecraftforge.gradle.common.task.TaskExtractRangeMap
+import net.minecraftforge.gradle.common.tasks.ApplyRangeMap
+import net.minecraftforge.gradle.common.tasks.ExtractExistingFiles
+import net.minecraftforge.gradle.common.tasks.ExtractRangeMap
 import net.minecraftforge.gradle.common.util.MinecraftRepo
 import net.minecraftforge.srgutils.IMappingBuilder
 import net.minecraftforge.srgutils.IMappingFile
@@ -35,28 +35,28 @@ if (doingUpdate) {
         if (srcDirs.empty)
             throw new RuntimeException("No java source directories found to update!")
 
-        task extractRangeMap(type: TaskExtractRangeMap) {
-            sources srcDirs
-            addDependencies javaCompile.getClasspath()
+        task extractRangeMap(type: ExtractRangeMap) {
+            sources.from srcDirs
+            dependencies.from javaCompile.getClasspath()
         }
 
         task chainMappings(type: CreatedChainMojmapsTask) {
             dependsOn(extractSrg)
-            mcVersion MinecraftRepo.getMCVersion(minecraft?.mappingVersion ?: '1.16.5')
-            extractSrgInput tasks.extractSrg.output
+            mcVersion MinecraftRepo.getMCVersion(minecraft?.mappingVersion?.get() ?: '1.16.5')
+            extractSrgInput tasks.extractSrg.output.get().asFile
         }
 
-        task applyRangeMap(type: TaskApplyRangeMap) {
+        task applyRangeMap(type: ApplyRangeMap) {
             dependsOn(extractRangeMap, chainMappings)
-            rangeMap tasks.extractRangeMap.output
-            setSrgFiles chainMappings.output //, tasks.createMcpToSrg.output
-            sources srcDirs
+            rangeMap = tasks.extractRangeMap.output
+            srgFiles.from chainMappings.output //, tasks.createMcpToSrg.output
+            sources.from srcDirs
         }
 
-        task extractMappedNew(type: TaskExtractExistingFiles) { task ->
+        task extractMappedNew(type: ExtractExistingFiles) { task ->
             dependsOn(applyRangeMap)
-            archive tasks.applyRangeMap.output
-            srcDirs.each { task.addTarget(it) }
+            archive = tasks.applyRangeMap.output
+            targets.from srcDirs
         }
 
         task updateClassnames {
